@@ -1,6 +1,15 @@
 0.1-6	(under development)
     *	fix a typo in dbClearResult
 
+    *	map NAs in query parameters into NULLs
+	(thanks to Alex Klenk)
+
+    *	explicitly close statements right away (Oracle seems to need this)
+	(thanks to Alex Klenk)
+
+    *	add "stat" slot (Statement object) to JDBCResult class to make sure
+	the statement lives long enough to not close the result set
+
 0.1-5	2007-10-01
     *	instantiate driver's class and use a call to 'connect' as a
 	fall-back if the DriverManager fails to find a proper driver.
